--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,15 +1,15 @@
-/* The progress container (grey background) */
-#progress-container {
-  position: relative;
+.navbar {
+  min-height: 2.5rem;
+  background-color: #4c4c4c;
+  box-shadow: 0px 1.25vh 1vh rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
   width: 100%;
-  background: #ccc;
-}
-
-/* The progress bar (scroll indicator) */
-#progress-bar {
-  height: 1vh;
-  background: #fc5457;
-  width: 0%;
+  z-index: 99;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 /* Navbar links */
@@ -22,7 +22,7 @@
   margin: auto;
 }
 
-/* highlight when section active */
+/* highlight nav text when corresponding section active */
 [data-aos="about-highlight"] {
   color: #ffffff;
   transition-property: color;
@@ -31,26 +31,21 @@
   color: #fc5457;
 }
 
-.nav-container {
-  height: 8vh;
-  min-height: 2.5rem;
-  background-color: #4c4c4c;
-  box-shadow: 0px 1.25vh 1vh rgba(0, 0, 0, 0.3);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 99;
-}
-
-.navbar {
-  height: 8vh;
-  min-height: 2.5rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
+/* space filler div */
 #nav-filler {
   flex-grow: 1;
+}
+
+/* The progress container (grey background) */
+#progress-container {
+  position: relative;
+  width: 100%;
+  background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+#progress-bar {
+  height: 1vh;
+  background: #fc5457;
+  width: 0%;
 }
