--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -7,7 +7,8 @@
 .about-background {
   background-color: rgb(42, 42, 42);
   width: 90vw;
-  padding: 5%;
+  padding: 2.5% 0;
+  margin: auto;
 }
 
 #about-container {
